adding dao to the services